[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/maps/finished/FinishedMap.gd" type="Script" id=1]
[ext_resource path="res://game/ui/CreditsScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/readloud.net/Finished.mp3" type="AudioStream" id=3]
[ext_resource path="res://game/terrain/FloorRise.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/godot-xr-tools/objects/Viewport_2D_in_3D.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/rooms/SmallRoom.tscn" type="PackedScene" id=7]

[node name="FinishedMap" type="Spatial"]
script = ExtResource( 1 )

[node name="Environment" type="Spatial" parent="."]

[node name="SmallRoom" parent="Environment" instance=ExtResource( 7 )]

[node name="FloorRise" parent="Environment" instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="CreditsScreen" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.8, -1.7 )
visible = false
screen_size = Vector2( 2.048, 1.2 )
viewport_size = Vector2( 1024, 600 )
scene = ExtResource( 2 )

[node name="Sounds" type="Node" parent="."]

[node name="Finished" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )

[connection signal="fade_complete" from="Player" to="." method="_on_Player_fade_complete"]
[connection signal="finished" from="Sounds/Finished" to="." method="_on_Finished_finished"]
